tools/KLEE_SOURCE/Release+Asserts/bin/temp_test/klee-out-19/test000001.readonly.err
Error: memory error: object read only
File: /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list1.c
Line: 16
Stack: 
	#0 00000037 in remove_from_list (head=20653248, node=20653824) at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list1.c:16
	#1 00000087 in main () at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list1.c:38
